@@ -12,6 +12,11 @@ Map::Map()
   reset();
 }
 //-----------------------------------------------------------------------------
+Map::~Map()
+{
+  // Do nothing
+}
+//-----------------------------------------------------------------------------
 real Map::det() const
 {
   return d;
